--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -234,20 +234,50 @@ h1 {
     border: solid 2px #A259F7;
     padding: 55px 55px;
  }
-
- .texto-endereco p {
-    width: 400px;
-    font-size: 20px;
- }
-
  .container-mapa {
     position: relative;
     overflow: hidden;
     width: 100%;
     padding-top: 20%;
- }
+}
+.mapa-responsivo {
+    position: absolute;
+    margin-top: 10px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+.container-video {
+    position: relative;
+    overflow: hidden;
+    width: 100px;
+    padding-top: 30%;
+}
+.video-responsivo {
+    position: absolute;
+    margin-top: 10px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
 
- .mapa-responsivo {
+ .texto-endereco p {
+    width: 400px;
+    font-size: 20px;
+ }
+ .container-mapa {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 20%;
+}
+.mapa-responsivo {
     position: absolute;
     margin-top: 10px;
     top: 0;
@@ -256,8 +286,14 @@ h1 {
     right: 0;
     width: 100%;
     height: 100%;
- }
- .container-video {
+}
+.container-video {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 30%;
+}
+.video-responsivo {
     position: absolute;
     margin-top: 10px;
     top: 0;
@@ -266,7 +302,7 @@ h1 {
     right: 0;
     width: 100%;
     height: 100%;
- }
+}
  footer{
     height: 80px;
     background-color: #f9003D;
@@ -317,7 +353,7 @@ h1 {
         padding-top: 20%;
     }
     .mapa-responsivo {
-        position: relative;
+        position: absolute;
         margin-top: 10px;
         top: 0;
         left: 0;
